force-app/main/default/objects/Contact_Report__c/Contact_Report__c.object-meta.xml
<CustomObject>
    <description>Tracks donor interactions and stewardship activities. Used by fundraisers to log meetings, calls, emails, and other contacts with donors.</description>
    <label>Contact Report</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contact Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>