force-app/main/default/objects/Contact_Report__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contact Reports</relationshipLabel>
    <relationshipName>Contact_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>