force-app/main/default/objects/Contact_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Team_Member__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>