force-app/main/default/objects/Contact_Report__c/listViews/My_Contact_Reports.listView-meta.xml
<ListView>
    <fullName>My_Contact_Reports</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Member__c</field>
        <operation>equals</operation>
        <value>$CurrentUser.Id</value>
    </filters>
    <label>My Contact Reports</label>
</ListView>